After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735323 - Command line options for delay and file name ignored.
Command line options for delay and file name ignored.
Status: RESOLVED FIXED
Product: gnome-screenshot
Classification: Core
Component: general
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-screenshot-maint
gnome-screenshot-maint
Depends on:
Blocks:
 
 
Reported: 2014-08-24 13:06 UTC by Evan McClain
Modified: 2014-08-25 23:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the variant type for -f option (1.07 KB, patch)
2014-08-25 15:38 UTC, Matthias Clasen
committed Details | Review

Description Evan McClain 2014-08-24 13:06:42 UTC
gnome-screenshot -d # does not delay the screenshot as expected, and gnome-screenshot -f filename.png still saves the screenshot to the default Screenshot from YYYY-MM-DD HH:mm:ss.png format.
Comment 1 Evan McClain 2014-08-24 13:07:59 UTC
gnome-screenshot 3.13.90, on openSUSE Factory with GNOME:Next.
Comment 2 Matthias Clasen 2014-08-25 15:38:39 UTC
Created attachment 284422 [details] [review]
Fix the variant type for -f option

Filename arguments are transmitted as bytestrings.
Comment 3 Cosimo Cecchi 2014-08-25 15:52:26 UTC
Review of attachment 284422 [details] [review]:

Looks good to me, thanks.
Comment 4 Cosimo Cecchi 2014-08-25 23:05:33 UTC
Attachment 284422 [details] pushed as 9aa397c - Fix the variant type for -f option