Fix the variant type for -f option

Filename arguments are transmitted as bytestrings.

https://bugzilla.gnome.org/show_bug.cgi?id=735323